# rust-api

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
migrations/2022-12-11-025523_usuario/: up.sql
src/: db_utils.rs  lib.rs  main.rs  models.rs  rotas.rs  schema.rs
src/routes/index/: index.rs
