[package]
name = "rust-api"
version = "1.0.0"
edition = "2021"
authors = ["Paulo Sérgio do Nascimento"]
repository = "https://github.com/paulobazooka/rust-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde_json = "1.0.89"
