[package]
name = "rust-api"
version = "1.0.0"
edition = "2021"
authors = ["Paulo Sérgio do Nascimento <paulosergionas@gmail.com>"]
repository = "https://github.com/paulobazooka/rust-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
rand = "0.8.5"
serde = "1.0.149"
serde_json = "1.0.89"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }
uuid = { version = "1.2.2", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
debug = false

